# pillowfort

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  security_best_practices_report.md  server.ts  tsconfig.json  wrangler.toml
.github/: pull_request_template.md
client/: index.html  package-lock.json  package.json  vite.config.ts
crypto/openmls-wasm/: Cargo.toml  browser-artifacts.sha256.json
crypto/openmls-wasm/src/: lib.rs
crypto/openmls-wasm/tests/: hpke_suite1.rs
docs/: BETA_ANALYTICS.md  DISCORD_ACTIVITY_SCOPE.md  EARLY_00S_UI_REFERENCES.md  FIRST_PAID_SKU.md  FORT_PASS_SUPPORT_RUNBOOK.md  GTM_EXECUTION_PLAN.md  GTM_MARKETING_PLAN.md  METRICS_REVIEW.md  PRODUCTION_MONITORING.md  PRODUCTION_STATE_POLICY.md  PROJECT_LEAD_BRIEF.md  PUBLIC_BETA_DEPLOY_CHECKLIST.md  SECURE_ROOM_PROTOCOL_V2.md  SECURE_ROOM_PROTOCOL_V4.md  STRIPE_TEST_SETUP.md
public/: index.html
scripts/: analytics_report.mjs  build-openmls-wasm.sh  run-security-tests.mjs  verify-openmls-artifacts.mjs
security-remediation/: STATUS.json  tasks.json
src/: admissionBundleV4.ts  alarms.ts  analytics.ts  applicationEventsV4.ts  deviceAuthV4.ts  entitlements.ts  game.ts  httpBoundary.ts  index.ts  protocolV4.ts  requestBody.ts  room.ts  roomAuth.ts  roomInvitationAuthV4.ts  roomInvitationMemberBindingV4.ts  routes.ts  secureGameReducer.ts  secureRelayPersistenceV4.ts  secureRelayV4.ts  secureTransportV4.ts  security.ts  shared.ts  stripe.ts
test/: admission-bundle-v4.test.ts  analytics-privacy.test.ts  application-events-v4.test.ts  e2e.test.ts  (+28 more)
(+71 files in other folders)
